RESOLVED FIXED308174
[block-in-inline] Incorrect <br> position when block margin is present (visually non-observable)
https://bugs.webkit.org/show_bug.cgi?id=308174
Summary [block-in-inline] Incorrect <br> position when block margin is present (visua...
alan
Reported 2026-02-18 15:49:43 PST
only observable through geometry functions like offsetTop
Attachments
Patch (4.30 KB, patch)
2026-02-18 16:10 PST, alan
no flags
Patch (94.08 KB, patch)
2026-02-20 07:51 PST, alan
no flags
[fast-cq]Patch (94.10 KB, patch)
2026-02-20 08:51 PST, alan
no flags
alan
Comment 1 2026-02-18 16:10:06 PST
alan
Comment 2 2026-02-20 07:51:20 PST
alan
Comment 3 2026-02-20 08:51:58 PST
Created attachment 478427 [details] [fast-cq]Patch
EWS
Comment 4 2026-02-20 11:30:36 PST
Committed 307932@main (e40ae8c085c1): <https://commits.webkit.org/307932@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 478427 [details].
Radar WebKit Bug Importer
Comment 5 2026-02-20 11:31:14 PST
Note You need to log in before you can comment on or make changes to this bug.